Update title and description for the video

--- a/src/components/FeaturedGallery.astro
+++ b/src/components/FeaturedGallery.astro
@@ -6,8 +6,8 @@ const images = await getImages({ collection: featuredCollectionId });
 ---
 
 <div class="max-w-2xl mx-auto text-center mb-16">
-	<h2 class="text-3xl md:text-4xl font-bold mb-4">Ce s-a întâmplat în liceu?</h2>
-	<p class="text-gray-600">Videoul de mai jos prezintă un rezumat </p>
+	<h2 class="text-3xl md:text-4xl font-bold mb-4">Patru ani de neuitat la "Aurel Vlaicu"</h2>
+	<p class="text-gray-600">O retrospectivă video a anilor de liceu petrecuți împreună, în clasa de Filologie E, la Colegiul Național „Aurel Vlaicu” (2011-2015). </p>
 </div>
 
 <div class="p-4 flex justify-center items-center">
